# reimagined-psalm-tree

./: .gitignore  README.md
bchip/: CMakeLists.txt  README.rst  nrf52840dk_nrf52840.overlay  prj.conf
bchip/libs/dfu_module/: dfu_module_52.c  dfu_module_52.h
bchip/libs/flash/: app_flash.c  app_flash.h
bchip/libs/simp/: simp.c  uart_drv.c
bchip/src/: app_cmd.c  app_flash.c  app_flash_cmd.c  app_flash_cmd.h  app_uart.c  app_uart.h  ble_dfu_helper.c  ble_dfu_helper.h  blecmds.h  main.c
ichip/: CMakeLists.txt  README.rst  mcuboot.conf  nrf9160dk_nrf9160_ns.overlay  prj.conf  readme.md
ichip/build_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  partitions.yml  pm.config
ichip/build_1/Kconfig/: Kconfig.shield  Kconfig.shield.defconfig
ichip/build_1/mcuboot/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  child_image_preload.cmake  cmake_install.cmake  compile_commands.json  shared_vars.cmake
ichip/build_1/mcuboot/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dev_handles.c  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd.dep  runners.yaml  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_pre0.elf  zephyr_pre0.map  zephyr_pre1.elf  zephyr_pre1.map
ichip/build_1/modules/cmsis/: cmake_install.cmake
ichip/build_1/modules/hal_nordic/: cmake_install.cmake
ichip/build_1/modules/mcuboot/: cmake_install.cmake
ichip/build_1/modules/nrf/: cmake_install.cmake
ichip/build_1/modules/nrfxlib/: cmake_install.cmake
ichip/build_1/spm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  child_image_preload.cmake  cmake_install.cmake  compile_commands.json  shared_vars.cmake
ichip/build_1/spm/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd  linker_zephyr_pre1.cmd.dep  runners.yaml  zephyr.dts.d  zephyr.elf  (+8 more)
ichip/build_1/zephyr/: .cmake.dotconfig.checksum  .config  app_moved_test_update.hex  app_signed.hex  app_test_update.hex  cmake_install.cmake  dev_handles.c  dfu_application.zip_manifest.json  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd  linker_zephyr_pre1.cmd.dep  mcuboot_primary_app.hex  merged.hex  runners.yaml  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_pre0.map  zephyr_pre1.map
ichip/libs/dfu_module/: dfu_modul.c  dfu_modul.h  http_client.c  http_client.h  int_dfu_helper.c  int_dfu_helper.h
ichip/libs/flash/: app_flash.c  app_flash.h
ichip/libs/simp/: simp.h  uart_drv.h
ichip/src/: app_cmd.c  app_flash.c  app_flash_cmd.c  app_flash_cmd.h  app_uart.c  http_client.c  http_client.h  int_dfu_helper.c  int_dfu_helper.h  main.c
simp/: CMakeLists.txt  README.rst  nrf52840dk_nrf52840.overlay  nrf9160dk_nrf9160_ns.overlay  prj.conf
simp/nrf91/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
simp/nrf91/spm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  child_image_preload.cmake  cmake_install.cmake  compile_commands.json  shared_vars.cmake
simp/nrf91/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  cmake_install.cmake  dev_handles.c  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd.dep  runners.yaml  zephyr.dts  zephyr.dts.pre  zephyr.lst  zephyr.stat
simp/src/: main.c
(+179 files in other folders)
